--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
+    <string name="snackbar_string">Swipe for other articles</string>
+
 
     <string name="up">Up</string>
 
